--- a/static/css/shared.css
+++ b/static/css/shared.css
@@ -26,16 +26,16 @@
 }
 
 .hide_pc {
-    display: none;
+    display: none !important;
 }
 
 @media (max-width: 992px)  { 
     /* smartphones, Android phones, landscape iPhone */ 
     .hide_mobile {
-        display: none;
+        display: none !important;
     }
     .hide_pc {
-        display: block;
+        display: block !important;
     }
     .navbar {
         border-radius: 0px 0px 0px 0px !important;
