--- a/static/css/shared.css
+++ b/static/css/shared.css
@@ -1,41 +1,13 @@
-:root {
-    --primary-color: var(#ff6d00);
-    --white-hover-color: rgb(233, 233, 233);
-}
-
-.navbar {
-    padding: 0px 0px 0px 0px !important;
-}
-
-.btn:hover {
-    background-color: var(--white-hover-color) !important;
-}
-
-.nav-link:hover {
-    color: var(--white-hover-color) !important;
-}
-
-.nav_logo {
-    width: 100%;
-    height: 100%;
-}
-
-.nav_spacing {
-    width: 200px;
-    height: 68px;
-}
-
-.hide_pc {
-    display: none !important;
+@media (min-width: 992px) {
+    .hide_pc {
+        display: none !important;
+    }
 }
 
 @media (max-width: 992px)  { 
     /* smartphones, Android phones, landscape iPhone */ 
     .hide_mobile {
         display: none !important;
-    }
-    .hide_pc {
-        display: block !important;
     }
     .navbar {
         border-radius: 0px 0px 0px 0px !important;
