--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -8,7 +8,6 @@
 	<title>MiiAudote</title>
 
 	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/bootstrap.css') }}">
-	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/shared.css') }}">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
 	<link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='icons/favicon.ico') }}">
@@ -19,7 +18,7 @@
 <body class="bg-body-secondary">
 	<!-- MISC -->
 	<!-- MODAL FILTER -->
-	<div class="modal fade" id="filterModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+	<div class="modal fade" id="filterModal" tabindex="-1" aria-hidden="true">
 		<div class="modal-dialog modal-dialog-centered">
 			<div class="modal-content">
 				<div class="modal-header">
@@ -38,9 +37,9 @@
 	</div>
 
 	<!-- PC SCREEN -->
-	<main class="d-flex flex-row hide_mobile">
+	<main class="d-flex flex-row d-none d-lg-flex">
 		<!-- NAV PC SIDEBAR -->
-		<nav class="d-flex flex-column p-3 bg-dark" style="width: 15%;">
+		<nav class="d-flex flex-column p-3 bg-dark" style="width: 15rem;">
 			<img class="nav_logo rounded-3 w-100 h-25" src="{{ url_for('static', filename='images/logo.svg') }}">
 
 			<ul class="navbar nav-pills flex-column mb-auto link-light">
@@ -61,22 +60,22 @@
 		</nav>
 
 		<!-- PC FEED -->
-		<div class="w-100 vh-100 d-flex justify-content-center" style="background-color: aqua;">
-			<div class="overflow-auto w-50 vh-100 py-4 container" style="background-color: red;">
+		<div class="flex-fill overflow-auto vh-100" style="background-color: aqua;">
+			<div class="container py-4 col-lg-4">
 				<h2>Scrollable Content</h2>
 				<p>This section scrolls when content overflows.</p>
 				<!-- Dummy tall content to show scrolling -->
 				<div class="bg-body-secondary p-3 vh-100">
 					Tall content here
 				</div>
-			</div>
+			</div>	
 		</div>
 	</main>
 
 	<!-- MOBILE SCREEN -->
-	<main class="d-flex flex-column vh-100 hide_pc">
+	<main class="d-flex flex-column vh-100 d-lg-none">
 		<!-- MOBILE TOP NAV -->
-		<nav class="navbar d-flex flex-row align-items-center bg-dark">
+		<nav class="navbar d-flex flex-row align-items-center bg-dark flex-nowrap">
 			<div class="flex-grow-1">
 				<img class="m-2 w-100" src="{{ url_for('static', filename='images/logo_inverted.svg') }}">
 			</div>
@@ -87,18 +86,18 @@
 
 		<!-- FEED AREA -->
 		<div class="flex-fill overflow-auto bg-light">
-			<div class="container py-4">
+			<div class="container py-4 col-lg-4">
 				<h2>Scrollable Content</h2>
 				<p>This section scrolls when content overflows.</p>
 				<!-- Dummy tall content to show scrolling -->
 				<div class="bg-body-secondary p-3 vh-100">
 					Tall content here
 				</div>
-			</div>
+			</div>	
 		</div>
 
 		<!-- MOBILE NAV BOTTOM BAR -->
-		<nav class="navbar bg-dark justify-content-center">
+		<nav class="navbar bg-dark justify-content-center flex-nowrap">
 			<ul class="navbar nav-pills flex-row justify-content-center mb-auto link-light">
 				<a type="button" class="btn btn-primary align-items-center d-flex fw-bold"><i class="bi bi-house-fill px-2 fs-1"></i></a>
 				<a type="button" class="btn btn-dark align-items-center d-flex"><i class="bi bi-plus-square px-2 fs-1"></i></a>
