--- a/templates/login.html
+++ b/templates/login.html
@@ -8,24 +8,21 @@
 	<title>MiiAudote</title>
 
 	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/bootstrap.css') }}">
-	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/shared.css') }}">
-	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/login.css') }}">
-
 	<link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='icons/favicon.ico') }}">
 
 	<script src="{{ url_for('static', filename='bootstrap/js/bootstrap.js') }}"></script>
-	<script src="{{ url_for('static', filename='scripts/login.js') }}"></script>
 </head>
 
 <body class="bg-body-secondary">
-	<main class="mt-5 d-flex align-items-center py-4">
-		<div class="form-signin w-100 m-auto bg-dark rounded-2">
+	<main class="d-flex align-items-center vh-100">
+		<div class="form-signin m-auto bg-dark rounded-2 container" style="max-width: 330px;">
 			<img class="mb-4 w-100" src="{{ url_for('static', filename='images/logo.svg') }}" alt="">
 
 			<form method="POST" action="">
 				{{ form.hidden_tag() }}
 				{{ form.email(class="form-control") }}
 				{{ form.password(class="form-control") }}
+                                <br>
 				{{ form.submit(class="btn btn-primary") }}
 
 				{% for error in form.email.errors %}
