--- a/templates/index.html
+++ b/templates/index.html
@@ -19,22 +19,27 @@
 
 <body class="bg-body-secondary">
 	<br class="d-none d-lg-block">
-	
+
 	<!-- MOBILE NAV -->
 	<nav class="navbar p-3 w-100 d-flex flex-nowrap d-lg-none bg-dark">
-		<div class="navbar-brand me-auto flex-grow-1 collapsed collapse show" style="transition: none;" id="navbarSupportedContent">
+		<div class="navbar-brand me-auto flex-grow-1 collapsed collapse show" style="transition: none;"
+			id="navbarSupportedContent">
 			<img class="w-50" src="{{ url_for('static', filename='images/logo_inverted.svg') }}">
 		</div>
 
 		<div class="collapse navbar-collapse flex-shrink-1 toggle" id="navbarSupportedContent">
 			<ul class="nav nav-pills mb-auto flex-column flex-lg-row fs-4">
-				<a type="button" class="btn btn-primary m-1 align-items-center d-flex fs-5 fw-bold"><i class="bi bi-house-fill px-2 fs-3"></i>Home</a>
-				<a type="button" class="btn btn-dark m-1 align-items-center d-flex fs-5"><i class="bi bi-people px-2 fs-3"></i>Quem Somos</a>
-				<a type="button" class="btn btn-dark m-1 align-items-center d-flex fs-5"><i class="bi bi-globe-americas px-2 fs-3"></i>Parcerias</a>
+				<a type="button" class="btn btn-primary m-1 align-items-center d-flex fs-5 fw-bold"><i
+						class="bi bi-house-fill px-2 fs-3"></i>Home</a>
+				<a type="button" class="btn btn-dark m-1 align-items-center d-flex fs-5"><i
+						class="bi bi-people px-2 fs-3"></i>Quem Somos</a>
+				<a type="button" class="btn btn-dark m-1 align-items-center d-flex fs-5"><i
+						class="bi bi-globe-americas px-2 fs-3"></i>Parcerias</a>
 			</ul>
 		</div>
 
-		<button class="navbar-toggler bg-primary text-light fs-1 mx-1 flex-shrink-1" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+		<button class="navbar-toggler bg-primary text-light fs-1 mx-1 flex-shrink-1" type="button"
+			data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent">
 			<span class="bi bi-list"></span>
 		</button>
 	</nav>
@@ -46,9 +51,12 @@
 		</div>
 
 		<ul class="nav nav-pills mb-auto flex-column flex-lg-row fs-4">
-			<a type="button" class="btn btn-primary m-1 align-items-center d-flex fs-5 fw-bold"><i class="bi bi-house-fill px-2 fs-3"></i>Home</a>
-			<a type="button" class="btn btn-dark m-1 align-items-center d-flex fs-5"><i class="bi bi-people px-2 fs-3"></i>Quem Somos</a>
-			<a type="button" class="btn btn-dark m-1 align-items-center d-flex fs-5"><i class="bi bi-globe-americas px-2 fs-3"></i>Parcerias</a>
+			<a type="button" class="btn btn-primary m-1 align-items-center d-flex fs-5 fw-bold"><i
+					class="bi bi-house-fill px-2 fs-3"></i>Home</a>
+			<a type="button" class="btn btn-dark m-1 align-items-center d-flex fs-5"><i
+					class="bi bi-people px-2 fs-3"></i>Quem Somos</a>
+			<a type="button" class="btn btn-dark m-1 align-items-center d-flex fs-5"><i
+					class="bi bi-globe-americas px-2 fs-3"></i>Parcerias</a>
 		</ul>
 	</nav>
 
@@ -57,12 +65,10 @@
 	<main>
 		<div id="carouselExampleIndicators" class="carousel slide">
 			<div class="carousel-indicators">
-				<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
-					aria-current="true" aria-label="Slide 1"></button>
-				<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
-					aria-label="Slide 2"></button>
-				<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
-					aria-label="Slide 3"></button>
+				<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
+					class="active"></button>
+				<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"></button>
+				<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"></button>
 			</div>
 			<div class="carousel-inner">
 				<div class="carousel-item active">
@@ -72,12 +78,12 @@
 			</div>
 			<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
 				data-bs-slide="prev">
-				<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+				<span class="carousel-control-prev-icon"></span>
 				<span class="visually-hidden">Previous</span>
 			</button>
 			<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
 				data-bs-slide="next">
-				<span class="carousel-control-next-icon" aria-hidden="true"></span>
+				<span class="carousel-control-next-icon"></span>
 				<span class="visually-hidden">Next</span>
 			</button>
 		</div>
@@ -88,7 +94,7 @@
 			<h1 class="text-primary"><b>Você já imaginou não ter um lar?</b></h1>
 			<br>
 			<p class="fs-4 text-wrap">
-				Em resumo, o nosso projeto tem como objetivo também, espalhar a palavra sobre a adoção de animais, um
+				Em suma, o nosso projeto tem como objetivo também, espalhar a palavra sobre a adoção de animais, um
 				ato que não apenas salva vidas, mas raramente é contra o encostando às vezes mostrado diariamente em
 				mídias, abrigos extremamente superlotados. Adotar é sempre um segundo nome para você e seu novo amor, e
 				você obtém um companheiro de vida fiel.
