--- a/templates/login.html
+++ b/templates/login.html
@@ -20,16 +20,16 @@
 
 			<form method="POST" action="">
 				{{ form.hidden_tag() }}
-				{{ form.email(class="form-control") }}
-				{{ form.password(class="form-control") }}
-                                <br>
+				{{ form.email(class="form-control", placeholder="Email") }}
+				{{ form.password(class="form-control", placeholder="Senha") }}
+				<br>
 				{{ form.submit(class="btn btn-primary") }}
 
 				{% for error in form.email.errors %}
-				        <p class="text-primary">{{ error }}</p>
+				<p class="text-primary">{{ error }}</p>
 				{% endfor %}
 				{% for error in form.password.errors %}
-				        <p class="text-primary">{{ error }}</p>
+				<p class="text-primary">{{ error }}</p>
 				{% endfor %}
 			</form>
 
